--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vine Revival</title>
     <link rel="stylesheet" href="assets/style/styles.css" />
-  </head>
-  <body>
+</head>
+<body>
     <div class="banner">
-      <img
-        src="assets/images/banner.jpg"
-        alt="Banner Image"
-        class="banner-image"
-      />
-      <img src="assets/images/vine_logo.png" alt="Vine Logo" class="logo" />
+        <img src="assets/images/banner.jpg" alt="Banner Image" class="banner-image" />
+        <img src="assets/images/vine_logo.png" alt="Vine Logo" class="logo" />
+    </div>
+    <div class="search-container">
+        <input type="text" class="search-input" placeholder="Search for a user (ie: Rus)" />
+        <button class="search-button">Search</button>
     </div>
     <main>
-      <div id="video-container"></div>
+        <div id="video-container"></div>
     </main>
     <footer>
-      <div class="copyright-disclaimer">
-        <p>
-          All rights to the content featured on this platform belong to their
-          respective owners. We do not claim ownership of any copyrighted
-          material.
-        </p>
-      </div>
+        <div class="copyright-disclaimer">
+            <p>
+                All rights to the content featured on this platform belong to their
+                respective owners. We do not claim ownership of any copyrighted
+                material.
+            </p>
+        </div>
     </footer>
     <script type="module" src="assets/scripts/main.js"></script>
-  </body>
+</body>
 </html>
